...
          })}
        >
          <SettingsRow
            title={t("contactSupportTitle", {
              defaultValue: "Contact support",
            })}
            testID="help-contact-support-row"
            onPress={() => navigation.navigate("ContactSupport")}
          />
          <SettingsRow
            title={t("sendFeedback")}
            testID="help-send-feedback-row"
            onPress={() => navigation.navigate("SendFeedback")}
          />
        </SettingsSection>
      </View>
    </FormScreenShell>
  );
...
